--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -246,7 +246,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:center;font-size:small;">
-                Design and source code from <a style="font-size:small;" href="https://jonbarron.info">Jon Barron's website</a>
+                A huge thank you to Leonid Keselman <a style="font-size:small;" href="https://leonidk.com"> </a> and <a style="font-size:small;" href="https://jonbarron.info">Jon Barron </a>
               </p>
             </td>
           </tr>
