--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -111,9 +111,10 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Intel Projects</h2>
-              <p>Besides my work on the RealSense depth sensors and the publications above, a sampling of my publicly disclosed work
-              </p>
+              <h2>Teaching</h2>
+              <p>
+                Introduction to Ordinary Differential Equation (MAT244), Teaching Assistant, University of Toronto (Spring 2025)
+                Linear Algebra I (MAT223), Teaching Assisant, University of Toronto (Fall 2023)
             </td>
           </tr>
         </table>
@@ -245,7 +246,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:center;font-size:small;">
-                A huge thank you to Leonid Keselman <a style="font-size:small;" href="https://leonidk.com"> </a> and <a style="font-size:small;" href="https://jonbarron.info">Jon Barron </a>
+                Thank you to Leonid Keselman <a style="font-size:small;" href="https://leonidk.com"> </a> and <a style="font-size:small;" href="https://jonbarron.info">Jon Barron </a>
               </p>
             </td>
           </tr>
