--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,9 +37,8 @@
                 I am a [Rhodes Scholar](https://www.utoronto.ca/news/changemakers-u-t-students-awarded-prestigious-rhodes-scholarships) and a University of Toronto undergrad in mathematics and statistcs. I am currently advised by Prof. Monica Alexander in department at Statistical Sciences where I work on US mortality data quality. I previously working in Prof. Jude Kong's AIIM Lab and I was a Laidlaw Scholar advised by Professor Kent Moore, Summer Undegraduate Research Fellow advised by Prof. Debra Wunch. In the summer 2022-2023 I was a Field's Institue Summer Undergraduate Research Fellow where I worked on random walks on threshold graphs for Profs. Ada Chen, Sooyeong Kim, Jane Breen, and students Giovanni Tedesco, Andrei Parfeni, and Alexander. I was the President of the University of Toronto Mathematics Union, representing over 4,000 students enrolled in a math course and I started a community garden at Victoria College in the Annex neighbourhood. I occassionally write for various outlets including the Varsity, Toronto Star, and CBC. I love reading.
             </p>
               <p style="text-align:center">
-                <a target="_blank" href="https://mailhide.io/e/B8TyS"> Email</a> &nbsp;/&nbsp;
+                <a href="mailto: amy.mann@mail.utoronto.ca"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/am-mann">GitHub</a> &nbsp;/&nbsp;
-                <a href="https://scholar.google.com/citations?user=GCYG4GoAAAAJ">Google Scholar</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/amy-mann-08a590216/"> LinkedIn </a>
               </p>
             </td>
@@ -191,7 +190,7 @@
 
           {% for post in site.posts %}
           {% for cat in post.categories %}
-          {% if cat != 'research' and cat != 'Intel' %}
+          {% if cat != 'research' %}
           <tr>
             <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
               <img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
