--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,6 +96,9 @@
               {% if post.youtube %}
               <a href="{{post.youtube}}">youtube</a> /
               {% endif %}
+              {% if post.paper %}
+              <a href="{{post.paper}}">paper</a> /
+              {% endif %}
               <p></p>
               {{ post.excerpt }}
             </td>
