--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
                 Amy Mann
               </h1>
             <p>
-                I am a [Rhodes Scholar](https://www.utoronto.ca/news/changemakers-u-t-students-awarded-prestigious-rhodes-scholarships) and a University of Toronto undergrad in mathematics and statistcs. I am currently advised by Prof. Monica Alexander in department at Statistical Sciences where I work on US mortality data quality. I previously working in Prof. Jude Kong's AIIM Lab and I was a Laidlaw Scholar advised by Professor Kent Moore, Summer Undegraduate Research Fellow advised by Prof. Debra Wunch. In the summer 2022-2023 I was a Field's Institue Summer Undergraduate Research Fellow where I worked on random walks on threshold graphs for Profs. Ada Chen, Sooyeong Kim, Jane Breen, and students Giovanni Tedesco, Andrei Parfeni, and Alexander. I was the President of the University of Toronto Mathematics Union, representing over 4,000 students enrolled in a math course and I started a community garden at Victoria College in the Annex neighbourhood. I occassionally write for various outlets including the Varsity, Toronto Star, and CBC. I love reading.
+                I am a <a href="https://www.utoronto.ca/news/changemakers-u-t-students-awarded-prestigious-rhodes-scholarships">Rhodes Scholar</a> and a University of Toronto undergrad in mathematics and statistics. I am currently advised by Prof. Monica Alexander in the Department of Statistical Sciences where I work on US mortality data quality. I previously worked in Prof. Jude Kong's AIIM Lab and I was a Laidlaw Scholar advised by Professor Kent Moore, Summer Undergraduate Research Fellow advised by Prof. Debra Wunch. In the summer 2022-2023 I was a <a href="http://www.fields.utoronto.ca/activities/23-24/2023-FUSRP">Fields Institute Summer Undergraduate Research Fellow</a> where I worked on random walks on threshold graphs for Profs. Ada Chen, Sooyeong Kim, Jane Breen, and students Giovanni Tedesco, Andrei Parfeni, and Alexander. I was the President of the University of Toronto Mathematics Union, representing over 4,000 students enrolled in a math course and I started a <a href="https://www.google.com/search?client=safari&rls=en&q=community+garden+victoria+college&ie=UTF-8&oe=UTF-8">community garden at Victoria College</a> in the Annex neighbourhood. I occasionally write for various outlets including the Varsity, Toronto Star, and CBC. I love reading.
             </p>
               <p style="text-align:center">
                 <a href="mailto: amy.mann@mail.utoronto.ca"> Email</a> &nbsp;/&nbsp;
@@ -78,6 +78,9 @@
               {% if post.arxiv %}
               <a href="{{post.arxiv}}">arxiv</a> /
               {% endif %}
+              {% if post.preprint %}
+              <a href="{{post.preprint}}">preprint</a> /
+              {% endif %}
               {% if post.video %}
               <a href="{{post.video}}">video</a> /
               {% endif %}
@@ -113,74 +116,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Teaching</h2>
-              <p>
-                Introduction to Ordinary Differential Equation (MAT244), Teaching Assistant, University of Toronto (Spring 2025)
-                Linear Algebra I (MAT223), Teaching Assisant, University of Toronto (Fall 2023)
-
-                I volunteered with the Pursue STEM Program in 2023 and 2024 supporting and teaching Black high school students about math.
-            </td>
-          </tr>
-        </table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-
-          {% for post in site.posts %}
-          {% for cat in post.categories %}
-          {% if cat == 'UofT' %}
-          <tr>
-            <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
-              <img src="{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
-            </td>
-            <td style="padding:2.5%;width:75%;vertical-align:middle">
-              <h3>{{post.title}}</h3>
-              <br>
-              <em>{{post.categories}} {{post.course}}</em>
-              <br>
-              {{ post.date | date: "%Y-%m-%d" }}
-
-              <br>
-              {% if post.website %}
-              <a href="{{post.website}}">website</a> /
-              {% endif %}
-              {% if post.paper %}
-              <a href="{{post.paper}}">paper</a> /
-              {% endif %}
-              {% if post.patent %}
-              <a href="{{post.patent}}">patent</a> /
-              {% endif %}
-              {% if post.patent2 %}
-              <a href="{{post.patent2}}">patent #2</a> /
-              {% endif %}
-              {% if post.patent3 %}
-              <a href="{{post.patent3}}">patent #3</a> /
-              {% endif %}
-              {% if post.video %}
-              <a href="{{post.video}}">video</a> /
-              {% endif %}
-              {% if post.video2 %}
-              <a href="{{post.video2}}">video #2</a> /
-              {% endif %}
-              {% if post.code %}
-              <a href="{{post.code}}">code</a> /
-              {% endif %}
-              {% if post.poster %}
-              <a href="{{post.poster}}">poster</a> /
-              {% endif %}
-              {% if post.slides %}
-              <a href="{{post.slides}}">slides</a> /
-              {% endif %}
-              <p></p>
-              {{ post.excerpt }}
-            </td>
-          </tr>
-          {% endif %}
-          {% endfor %}
-          {% endfor %}
-        </table>
-        <br>
-        <br>
-        <br>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Other Projects</h2>
@@ -224,6 +160,9 @@
               {% if post.video %}
               <a href="{{post.video}}">video</a> /
               {% endif %}
+              {% if post.preprint %}
+              <a href="{{post.preprint}}">preprint</a> /
+              {% endif %}
               {% if post.video2 %}
               <a href="{{post.video2}}">video #2</a> /
               {% endif %}
@@ -244,90 +183,35 @@
           {% endfor %}
           {% endfor %}
         </table>
-       <h2>Miscellanea</h2>
-              </td>
-            </tr>
-          </tbody></table>
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            
-           
-            <tr>
-              <td align="center" style="padding:16px;width:20%;vertical-align:middle">
-						     <div class="colored-box" style="background-color: #fcb97d;">
-								 <h2>Micropapers</h2>
-								 </div>
-              </td>
-              <td style="padding:8px;width:80%;vertical-align:middle">
-                <a href="https://arxiv.org/abs/2112.11687">Squareplus: A Softplus-Like Algebraic Rectifier</a>
-                <br>
-                <a href="https://arxiv.org/abs/2010.09714">A Convenient Generalization of Schlick's Bias and Gain Functions</a>
-                <br>
-                <a href="https://arxiv.org/abs/1704.07483">Continuously Differentiable Exponential Linear Units</a>
-                <br>
-                <a href="https://jonbarron.info/data/cvpr2023_llm_workshop_annotated.pdf">Scholars & Big Models: How Can Academics Adapt?</a>
-              </td>
-            </tr>
 
+             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          <tr>
+            <td style="padding:2.5%;width:100%;vertical-align:middle">
+              <h2>Teaching</h2>
+              <p>
+                Introduction to Ordinary Differential Equation (MAT244), Teaching Assistant, University of Toronto (Spring 2025)
+                Linear Algebra I (MAT223), Teaching Assisant, University of Toronto (Fall 2023)
 
-            <tr>
-              <td align="center" style="padding:16px;width:20%;vertical-align:middle">
-						     <div class="colored-box" style="background-color: #aaba9e;">
-								 <h2>Recorded Talks</h2>
-								 </div>
-              </td>
-              <td style="padding:8px;width:80%;vertical-align:center">
-                <a href="https://www.youtube.com/watch?v=hFlF33JZbA0">Radiance Fields and the Future of Generative Media, 2025</a><br>				  
-                <a href="https://www.youtube.com/watch?v=h9vq_65eDas">View Dependent Podcast, 2024</a><br>
-                <a href="https://www.youtube.com/watch?v=4tDhYsFuEqo">Bay Area Robotics Symposium, 2023
-</a><br>
-                <a href="https://youtu.be/TvWkwDYtBP4?t=7604">EGSR Keynote, 2021</a><br>
-				<a href="https://www.youtube.com/watch?v=nRyOzHpcr4Q">TUM AI Lecture Series, 2020</a><br>
-				<a href="https://www.youtube.com/watch?v=HfJpQCBTqZs">Vision & Graphics Seminar at MIT, 2020</a>
-              </td>
-            </tr>
-
-            <tr>
-              <td align="center" style="padding:16px;width:20%;vertical-align:middle">
-						     <div class="colored-box" style="background-color: #c6b89e;">
-								 <h2>Academic Service</h2>
-								 </div>
-              </td>
-              <td style="padding:8px;width:80%;vertical-align:center">
-                <a href="https://iccv.thecvf.com/">Lead Area Chair, ICCV 2025</a>
-                <br>
-                <a href="https://cvpr.thecvf.com/Conferences/2025/Organizers">Lead Area Chair, CVPR 2025</a>
-                <br>
-                <a href="https://cvpr.thecvf.com/Conferences/2024/Organizers">Area Chair, CVPR 2024</a>
-                <br>
-                <a href="https://cvpr2023.thecvf.com/Conferences/2023/Organizers">Demo Chair, CVPR 2023</a>
-                <br>
-                <a href="https://cvpr2022.thecvf.com/area-chairs">Area Chair, CVPR 2022</a>
-                <br>
-                <a href="http://cvpr2021.thecvf.com/area-chairs">Area Chair & Award Committee Member, CVPR 2021</a>
-                <br>
-                <a href="http://cvpr2019.thecvf.com/area_chairs">Area Chair, CVPR 2019</a>
-                <br>
-                <a href="http://cvpr2018.thecvf.com/organizers/area_chairs">Area Chair, CVPR 2018</a>
-              </td>
-            </tr>
-						
-						
-           
-            <tr>
-              <td align="center" style="padding:16px;width:20%;vertical-align:middle">
-						     <div class="colored-box" style="background-color: #edd892;">
-								 <h2>Teaching</h2>
-								 </div>
-              </td>
-              <td style="padding:8px;width:80%;vertical-align:center">
-                <a href="http://inst.eecs.berkeley.edu/~cs188/sp11/announcements.html">Graduate Student Instructor, CS188 Spring 2011</a>
-                <br>
-                <a href="http://inst.eecs.berkeley.edu/~cs188/fa10/announcements.html">Graduate Student Instructor, CS188 Fall 2010</a>
-                <br>
-                <a href="http://aima.cs.berkeley.edu/">Figures, "Artificial Intelligence: A Modern Approach", 3rd Edition</a>
-              </td>
-            </tr>
-            
+                I volunteered with the Pursue STEM Program in 2023 and 2024 supporting and teaching Black high school students about math.
+            </td>
+          </tr>
+        </table>
+        
+         <h2>Miscellanea</h2>
+        <ul>
+          <li>
+            <strong>Books I really love</strong><br>
+            <ul>
+              <li>2025: Eden's Outcasts, Say Nothing, We Don't Know Ourselves, America, América</li>
+              <li>2024: Far From the Tree, Mountains beyond Mountains, Amusing Ourselves to Death, The Future is History, The Gnostic Gospels</li>
+              <li>2023: Prairie Fires, Empire of Pain</li>
+            </ul>
+            I enjoy reviewing books and I recently got a Goodreads account.
+          </li>
+          <li>
+            I grew up in Winnipeg, Manitoba. Favourite pictures of the Canadian Prairies.
+          </li>
+        </ul>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
