--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -197,21 +197,25 @@
           </tr>
         </table>
         
-         <h2>Miscellanea</h2>
-        <ul>
-          <li>
+                <h2>Miscellanea</h2>
+        <div style="margin-bottom: 1.5em;">
+          <p>
+            I am really interested in the history of medicine and history of psychiatry. I took a seminar class on the history of medicine and my paper was selected to be published in the Undergraduate History Journal.
+          </p>
+          <p>
+            On the side, I also wrote a thesis doing a scoping review of association guidelines recommending lifestyle interventions which I continue to think is interesting, with guidance from Dr. Natalie Riediger.
+          </p>
+          <p>
             <strong>Books I really love</strong><br>
-            <ul>
-              <li>2025: Eden's Outcasts, Say Nothing, We Don't Know Ourselves, America, América</li>
-              <li>2024: Far From the Tree, Mountains beyond Mountains, Amusing Ourselves to Death, The Future is History, The Gnostic Gospels</li>
-              <li>2023: Prairie Fires, Empire of Pain</li>
-            </ul>
+            2025: Eden's Outcasts, Say Nothing, We Don't Know Ourselves, America, América<br>
+            2024: Far From the Tree, Mountains beyond Mountains, Amusing Ourselves to Death, The Future is History, The Gnostic Gospels<br>
+            2023: Prairie Fires, Empire of Pain<br>
             I enjoy reviewing books and I recently got a Goodreads account.
-          </li>
-          <li>
+          </p>
+          <p>
             I grew up in Winnipeg, Manitoba. Favourite pictures of the Canadian Prairies.
-          </li>
-        </ul>
+          </p>
+        </div>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
