--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,8 +37,7 @@
               I am a <a href="https://www.utoronto.ca/news/changemakers-u-t-students-awarded-prestigious-rhodes-scholarships">Rhodes Scholar</a> and a University of Toronto undergrad in mathematics and statistics. I am currently advised by Prof. Monica Alexander in the Department of Statistical Sciences where I work on US mortality data quality. I previously worked in Prof. Jude Kong's AIIM Lab and I was a Laidlaw Scholar advised by Professor Kent Moore, Summer Undergraduate Research Fellow advised by Prof. Debra Wunch. In the summer 2022-2023 I was a <a href="http://www.fields.utoronto.ca/activities/23-24/2023-FUSRP">Fields Institute Summer Undergraduate Research Fellow</a> where I worked on random walks on threshold graphs for Profs. Ada Chen, Sooyeong Kim, Jane Breen, and students Giovanni Tedesco, Andrei Parfeni, and Alexander.
             </p>
             <p>
-              I was the President of the University of Toronto Mathematics Union, representing over 4,000 students enrolled in a math course and I started a <a href="https://www.google.com/search?client=safari&rls=en&q=community+garden+victoria+college&ie=UTF-8&oe=UTF-8">community garden at Victoria College</a> in the Annex neighbourhood. I occasionally write for various outlets including the Varsity, Toronto Star, and CBC. I love reading.
-            </p>
+            I was the President of the University of Toronto Mathematics Union, representing over 4,000 students enrolled in a math course and I started a <a href="https://www.google.com/search?client=safari&rls=en&q=community+garden+victoria+college&ie=UTF-8&oe=UTF-8">community</a> <a href="https://defygravitycampaign.utoronto.ca/news-and-stories/u-of-t-students-build-community-with-the-help-of-annual-donors/">garden</a> at Victoria College.            </p>
               <p style="text-align:center">
                 <a href="mailto: amy.mann@mail.utoronto.ca"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/am-mann">GitHub</a> &nbsp;/&nbsp;
@@ -46,7 +45,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <img style="width:100%;max-width:100%" alt="profile photo" src="images/profile.jpeg">
+              <img style="width:100%;max-width:100%" alt="profile photo" src="images/profile.png">
             </td>
           </tr>
         </table>
