--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
   <meta name="author" content="{{ site.name }}" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <link rel="icon" type="image/png" href="/images/a-icon.png">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
@@ -224,8 +224,7 @@
               <td style="padding:0px">
               <br>
               <p style="text-align:center;font-size:small;">
-                Thank you to Leonid Keselman <a style="font-size:small;" href="https://leonidk.com"> </a> and <a style="font-size:small;" href="https://jonbarron.info">Jon Barron </a>
-              </p>
+Many thanks to <a style="font-size:small;" href="https://leonidk.com">Leonid Keselman</a> and <a style="font-size:small;" href="https://jonbarron.info">Jon Barron</a>              </p>
             </td>
           </tr>
         </table>
