add links to files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -209,13 +209,13 @@
           </p>
           <p>
             <strong>Books I really love</strong><br>
-            2025: Eden's Outcasts, Say Nothing, We Don't Know Ourselves, America, América<br>
+            2025: Eden's Outcasts, Say Nothing, We Don't Know Ourselves, America, América, The Pope and Mussolini <br>
             2024: Far From the Tree, Mountains beyond Mountains, Amusing Ourselves to Death, The Future is History, The Gnostic Gospels<br>
             2023: Prairie Fires, Empire of Pain<br>
-            I enjoy reviewing books and I recently got a Goodreads account.
+            I enjoy reviewing books and I recently got a <a href="https://www.goodreads.com/user/show/190316788-amy-mann">Goodreads account</a>.
           </p>
           <p>
-            I grew up in Winnipeg, Manitoba. Favourite pictures of the Canadian Prairies.
+            I grew up in Winnipeg, Manitoba. My favourite pictures of the Canadian Prairies.
           </p>
         </div>
           </tbody></table>
