update research bio

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                I'm interested in statistics applied to public health and social science.
+                I was originally a physics major prior and switched into mathematics mid-way through second-year. I'm interested in statistics applied to public health and social science.
               </p>
             </td>
           </tr>
