fixed margins of Miscellanea section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -199,27 +199,29 @@
           </tr>
         </table>
         
-                <h2>Miscellanea</h2>
-        <div style="margin-bottom: 1.5em;">
-          <p>
-            I am really interested in the history of medicine and history of psychiatry. I took a seminar class on the history of medicine and my paper was selected to be published in the Undergraduate History Journal.
-          </p>
-          <p>
-            On the side, I also wrote a thesis doing a scoping review of association guidelines recommending lifestyle interventions which I continue to think is interesting, with guidance from Dr. Natalie Riediger.
-          </p>
-          <p>
-            <strong>Books I really love</strong><br>
-            2025: Eden's Outcasts, Say Nothing, We Don't Know Ourselves, America, América, The Pope and Mussolini <br>
-            2024: Far From the Tree, Mountains beyond Mountains, Amusing Ourselves to Death, The Future is History, The Gnostic Gospels<br>
-            2023: Prairie Fires, Empire of Pain<br>
-            I enjoy reviewing books and I recently got a <a href="https://www.goodreads.com/user/show/190316788-amy-mann">Goodreads account</a>.
-          </p>
-          <p>
-            I grew up in Winnipeg, Manitoba. My favourite pictures of the Canadian Prairies.
-          </p>
-        </div>
-          </tbody></table>
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+  <tr>
+    <td style="padding:2.5%;width:100%;vertical-align:middle">
+      <h2>Miscellanea</h2>
+      <p>
+        I am really interested in the history of medicine and history of psychiatry. I took a seminar class on the history of medicine and my paper was selected to be published in the Undergraduate History Journal.
+      </p>
+      <p>
+        On the side, I also wrote a thesis doing a scoping review of association guidelines recommending lifestyle interventions which I continue to think is interesting, with guidance from Dr. Natalie Riediger.
+      </p>
+      <p>
+        <strong>Books I really love</strong><br>
+        2025: Eden's Outcasts, Say Nothing, We Don't Know Ourselves, America, América, The Pope and Mussolini <br>
+        2024: Far From the Tree, Mountains beyond Mountains, Amusing Ourselves to Death, The Future is History, The Gnostic Gospels<br>
+        2023: Prairie Fires, Empire of Pain<br>
+        I enjoy reviewing books and I recently got a <a href="https://www.goodreads.com/user/show/190316788-amy-mann">Goodreads account</a>.
+      </p>
+      <p>
+        I grew up in Winnipeg, Manitoba. My favourite pictures of the Canadian Prairies.
+      </p>
+    </td>
+  </tr>
+</table>  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
               <td style="padding:0px">
               <br>
