--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,9 +54,6 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
-              <p>
-                 I'm interested in statistics applied to public health and social science. I was originally a physics major prior to switching into the mathematics program mid-way through second-year.
-              </p>
             </td>
           </tr>
         </table>
@@ -204,7 +201,7 @@
     <td style="padding:2.5%;width:100%;vertical-align:middle">
       <h2>Miscellanea</h2>
       <p>
-        I am really interested in the history of medicine and history of psychiatry. I took a seminar class on the history of medicine and my paper was selected to be published in the Undergraduate History Journal.
+        Outside of my research, I love history. I am really interested in the history of medicine and history of psychiatry. I took a seminar class on the history of medicine and my paper was selected to be published in Synthesis: Undergraduate Journal of History of Science. You can also read it here.
       </p>
       <p>
         On the side, I also wrote a thesis doing a scoping review of association guidelines recommending lifestyle interventions which I continue to think is interesting, with guidance from Dr. Natalie Riediger.
@@ -212,12 +209,12 @@
       <p>
         <strong>Books I really love</strong><br>
         2025: Eden's Outcasts, Say Nothing, We Don't Know Ourselves, America, América, The Pope and Mussolini <br>
-        2024: Far From the Tree, Mountains beyond Mountains, Amusing Ourselves to Death, The Future is History, The Gnostic Gospels<br>
-        2023: Prairie Fires, Empire of Pain<br>
-        I enjoy reviewing books and I recently got a <a href="https://www.goodreads.com/user/show/190316788-amy-mann">Goodreads account</a>.
+        2024: Far From the Tree, Mountains beyond Mountains, Amusing Ourselves to Death, The Man Without a Face, The Gnostic Gospels<br>
+        2023: Prairie Fires, Empire of Pain, The Future is History <br>
+        I enjoy reviewing books and I recently got a <a href="https://www.goodreads.com/review/list/190316788?sort=rating&view=reviews">Goodreads account</a>.
       </p>
       <p>
-        I grew up in Winnipeg, Manitoba. My favourite pictures of the Canadian Prairies.
+        I grew up in Winnipeg, Manitoba. 
       </p>
     </td>
   </tr>
