added links to miscellana section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -201,11 +201,11 @@
     <td style="padding:2.5%;width:100%;vertical-align:middle">
       <h2>Miscellanea</h2>
       <p>
-        Outside of my research, I love history. I am really interested in the history of medicine and history of psychiatry. I took a seminar class on the history of medicine and my paper was selected to be published in Synthesis: Undergraduate Journal of History of Science. You can also read it here.
-      </p>
+        Outside of my research, I love history. I am really interested in the history of medicine and history of psychiatry. I took a seminar class on the history of medicine and my paper was selected to be published in <a href="https://indd.adobe.com/view/013ff01a-74f4-4e21-a2e1-edbe4ae1791d"></a>Synthesis: Undergraduate Journal of History of Science</a>. You can also read it <a href="https://drive.google.com/file/d/1jvc9zfHvvrvvQvktJzQqcDx9OU2uwIHG/view?usp=sharing">here</a>.      </p>
       <p>
-        On the side, I also wrote a thesis doing a scoping review of association guidelines recommending lifestyle interventions which I continue to think is interesting, with guidance from Dr. Natalie Riediger.
-      </p>
+        <p>
+          On the side, I also wrote a <a href="https://drive.google.com/file/d/1a3ymxwu6UqDJYJs-E51DxNIBNIPKuU8L/view?usp=sharing">thesis</a> doing a scoping review of association guidelines recommending lifestyle interventions which I continue to think is interesting, with guidance from Dr. Natalie Riediger.
+        </p>      </p>
       <p>
         <strong>Books I really love</strong><br>
         2025: Eden's Outcasts, Say Nothing, We Don't Know Ourselves, America, América, The Pope and Mussolini <br>
