--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -181,17 +181,17 @@
           {% endif %}
           {% endfor %}
           {% endfor %}
-        </table>
-
-             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Teaching</h2>
               <p>
-                Introduction to Ordinary Differential Equation (MAT244), Teaching Assistant, University of Toronto (Spring 2025)
-                Linear Algebra I (MAT223), Teaching Assisant, University of Toronto (Fall 2023)
-
-                I volunteered with the Pursue STEM Program in 2023 and 2024 supporting and teaching Black high school students about math.
+                Introduction to Ordinary Differential Equations (MAT244), Teaching Assistant, University of Toronto (Spring 2025)<br>
+                Linear Algebra I (MAT223), Teaching Assistant, University of Toronto (Fall 2023)
+              </p>
+              <p>
+                I volunteered with the Pursue STEM Program in 2023 and 2024, supporting and teaching Black high school students about math.
+              </p>
             </td>
           </tr>
         </table>
