--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,8 @@
                 Amy Mann
               </h1>
             <p>
-              I graduated from the University of Toronto with a joint Bachelor's in Mathematics and Statistics as a <a href="https://future.utoronto.ca/national-scholarships">2021 National Scholar</a>.            </p>
+              I am an MSc student in Statistical Science at Oxford and a <a href="https://www.utoronto.ca/news/changemakers-u-t-students-awarded-prestigious-rhodes-scholarships">Rhodes Scholar</a>. I graduated from the University of Toronto with a joint Bachelor's in Mathematics and Statistics as a 2021 <a href="https://future.utoronto.ca/national-scholarships">National Scholar</a>. I am currently advised by <a href="https://www.monicaalexander.com">Monica Alexander</a> in the Department of Statistical Sciences where I am studying US mortality data quality. I previously worked in Prof. Jude Kong's AIIM Lab, Kent Moore's Lab as a Laidlaw Scholar, and the Wunch Group as a Summer Undergraduate Research Fellow. I was a 2023 <a href="http://www.fields.utoronto.ca/activities/23-24/2023-FUSRP">Fields Undergraduate Summer Research Fellow</a> where I worked on random walks and Kemney's constant.
+            </p>
             <p>
             I was originally a physics major prior to switching into math. My research interest now lies in the intersection of statistics and social science. I was the President of the University of Toronto Mathematics Union, representing over 4,000 students enrolled in a math course and I started a <a href="https://www.google.com/search?client=safari&rls=en&q=community+garden+victoria+college&ie=UTF-8&oe=UTF-8">community garden</a> at Victoria College.            </p>
               <p style="text-align:center">
