--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
               I am an MSc student in Statistical Science at Oxford and a <a href="https://www.utoronto.ca/news/changemakers-u-t-students-awarded-prestigious-rhodes-scholarships">Rhodes Scholar</a>. I graduated from the University of Toronto with a joint Bachelor's in Mathematics and Statistics as a <a href="https://future.utoronto.ca/national-scholarships">National Scholar</a>. I am currently a research assistant for <a href="https://www.monicaalexander.com">Monica Alexander</a> in the Department of Statistical Sciences. I previously worked in Prof. Jude Kong's AIIM Lab, Kent Moore's Lab as a Laidlaw Scholar, and the Wunch Group as a Summer Undergraduate Research Fellow. I was a 2023 <a href="http://www.fields.utoronto.ca/activities/23-24/2023-FUSRP">Fields Undergraduate Summer Research Fellow</a> where I worked on random walks and Kemney's constant.
             </p>
             <p>
-            I was originally a physics major prior to switching into math. My research interest now lies in the intersection of statistics and social science. I was the President of the University of Toronto Mathematics Union and I started a <a href="https://www.google.com/search?client=safari&rls=en&q=community+garden+victoria+college&ie=UTF-8&oe=UTF-8">community garden</a> at Victoria College.            </p>
+            I was originally a physics major prior to switching into math. My research now lies in the intersection of statistics and social science. I was the President of the University of Toronto Mathematics Union and I started a <a href="https://www.google.com/search?client=safari&rls=en&q=community+garden+victoria+college&ie=UTF-8&oe=UTF-8">community garden</a> at Victoria College.            </p>
               <p style="text-align:center">
                 <a href="mailto: amy.mann@mail.utoronto.ca"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/am-mann">GitHub</a> &nbsp;/&nbsp;
@@ -201,7 +201,7 @@
     <td style="padding:2.5%;width:100%;vertical-align:middle">
       <h2>Miscellanea</h2>
       <p>
-        Outside of my research, I love history. I am really interested in the history of medicine and history of psychiatry. I took a seminar class on the history of medicine and my paper was selected to be published in <a href="https://indd.adobe.com/view/013ff01a-74f4-4e21-a2e1-edbe4ae1791d"></a>Synthesis: Undergraduate Journal of History of Science</a>. You can also read it <a href="https://drive.google.com/file/d/1jvc9zfHvvrvvQvktJzQqcDx9OU2uwIHG/view?usp=sharing">here</a>.      </p>
+        Outside of my research, I am interested in history. I took a seminar class on the history of medicine and my paper was selected to be published in <a href="https://indd.adobe.com/view/013ff01a-74f4-4e21-a2e1-edbe4ae1791d"></a>Synthesis: Undergraduate Journal of History of Science</a>. You can also read it <a href="https://drive.google.com/file/d/1jvc9zfHvvrvvQvktJzQqcDx9OU2uwIHG/view?usp=sharing">here</a>.      </p>
       <p>
         <p>
           On the side, I also wrote a <a href="https://drive.google.com/file/d/1a3ymxwu6UqDJYJs-E51DxNIBNIPKuU8L/view?usp=sharing">thesis</a> doing a scoping review of association guidelines recommending lifestyle interventions which I continue to think is interesting, with guidance from Dr. Natalie Riediger.
