--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -204,7 +204,7 @@
         Outside of my research, I am interested in history. I took a seminar class on the history of medicine and my paper was selected to be published in <a href="https://indd.adobe.com/view/013ff01a-74f4-4e21-a2e1-edbe4ae1791d"></a>Synthesis: Undergraduate Journal of History of Science</a>. You can also read it <a href="https://drive.google.com/file/d/1jvc9zfHvvrvvQvktJzQqcDx9OU2uwIHG/view?usp=sharing">here</a>.      </p>
       <p>
         <p>
-          On the side, I also wrote a <a href="https://drive.google.com/file/d/1a3ymxwu6UqDJYJs-E51DxNIBNIPKuU8L/view?usp=sharing">thesis</a> doing a scoping review of association guidelines recommending lifestyle interventions which I continue to think is interesting, with guidance from Dr. Natalie Riediger. I love math and continue to enjoy thinking about random walks and other combinatorial problems in my free time.
+          I love math and continue to enjoy thinking about random walks and other combinatorial problems in my free time. On the side, I also wrote a <a href="https://drive.google.com/file/d/1a3ymxwu6UqDJYJs-E51DxNIBNIPKuU8L/view?usp=sharing">thesis</a> doing a scoping review of association guidelines recommending lifestyle interventions which I continue to think is interesting, with guidance from Dr. Natalie Riediger.
         </p>      </p>
       <p>
         <strong>Books I really love</strong><br>
