shortened and corrected a link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -201,11 +201,8 @@
     <td style="padding:2.5%;width:100%;vertical-align:middle">
       <h2>Miscellanea</h2>
       <p>
-        Outside of my research, I am interested in history. I took a seminar class on the history of medicine and my paper was selected to be published in <a href="https://indd.adobe.com/view/013ff01a-74f4-4e21-a2e1-edbe4ae1791d"></a>Synthesis: Undergraduate Journal of History of Science</a>. You can also read it <a href="https://drive.google.com/file/d/1jvc9zfHvvrvvQvktJzQqcDx9OU2uwIHG/view?usp=sharing">here</a>.      </p>
-      <p>
-        <p>
-          I love math and continue to enjoy thinking about random walks and other combinatorial problems in my free time. On the side, I also wrote a <a href="https://drive.google.com/file/d/1a3ymxwu6UqDJYJs-E51DxNIBNIPKuU8L/view?usp=sharing">scoping review </a> of association guidelines recommending lifestyle interventions with guidance from Natalie Riediger which I thought was interesting.
-        </p>      </p>
+        I love math and continue to enjoy thinking about random walks and other combinatorial problems in my free time. Outside of my research, I am interested in history. I took a seminar class on the history of medicine and my paper was selected to be published in <a href="https://indd.adobe.com/view/013ff01a-74f4-4e21-a2e1-edbe4ae1791d">Synthesis: Undergraduate Journal of History of Science</a>. You can also read it <a href="https://drive.google.com/file/d/1jvc9zfHvvrvvQvktJzQqcDx9OU2uwIHG/view?usp=sharing">here</a>. On the side, I also wrote a <a href="https://drive.google.com/file/d/1a3ymxwu6UqDJYJs-E51DxNIBNIPKuU8L/view?usp=sharing">scoping review</a> of association guidelines recommending lifestyle interventions with guidance from Natalie Riediger which I thought was interesting.
+      </p>  
       <p>
         <strong>Books I really love</strong><br>
         2025: Eden's Outcasts, Say Nothing, We Don't Know Ourselves, America, América, The Pope and Mussolini <br>
@@ -216,7 +213,7 @@
       </p>
     </td>
   </tr>
-</table>  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+</table><table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
               <td style="padding:0px">
               <br>
