--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
               I am an MSc student in Statistical Science at Oxford and a <a href="https://www.utoronto.ca/news/changemakers-u-t-students-awarded-prestigious-rhodes-scholarships">Rhodes Scholar</a>. I graduated from the University of Toronto with a joint Bachelor's in Mathematics and Statistics as a <a href="https://future.utoronto.ca/national-scholarships">National Scholar</a>. I am currently a research assistant for <a href="https://www.monicaalexander.com">Monica Alexander</a> in the Department of Statistical Sciences. I previously worked in Prof. Jude Kong's AIIM Lab, Kent Moore's Lab as a Laidlaw Scholar, and the Wunch Group as a Summer Undergraduate Research Fellow. I was a 2023 <a href="http://www.fields.utoronto.ca/activities/23-24/2023-FUSRP">Fields Undergraduate Summer Research Fellow</a> where I worked on random walks and Kemney's constant.
             </p>
             <p>
-            I was originally a physics major prior to switching into math. My research now lies in the intersection of statistics and social science. I was the President of the University of Toronto Mathematics Union and I started a <a href="https://www.google.com/search?client=safari&rls=en&q=community+garden+victoria+college&ie=UTF-8&oe=UTF-8">community garden</a> at Victoria College.            </p>
+            I was originally a physics major prior to switching into math. My research now lies in the intersection of statistics and social science. I was the President of the University of Toronto Mathematics Union and I started a <a href="https://www.google.com/search?client=safari&rls=en&q=community+garden+victoria+college&ie=UTF-8&oe=UTF-8">community garden</a> at Victoria College. I am from Winnipeg, Manitoba.           </p>
               <p style="text-align:center">
                 <a href="mailto: amy.mann@mail.utoronto.ca"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/am-mann">GitHub</a> &nbsp;/&nbsp;
@@ -209,7 +209,7 @@
         2024: Far From the Tree, Mountains beyond Mountains, Amusing Ourselves to Death, The Man Without a Face, The Gnostic Gospels<br>
         2023: Prairie Fires, Empire of Pain, The Future is History <br>
         <br>
-        I enjoy reviewing books and I recently got a <a href="https://www.goodreads.com/review/list/190316788?sort=rating&view=reviews">Goodreads account</a>. I am from Winnipeg, Manitoba. 
+        I enjoy reviewing books and I recently got a <a href="https://www.goodreads.com/review/list/190316788?sort=rating&view=reviews">Goodreads account</a>.
       </p>
     </td>
   </tr>
