--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -190,7 +190,7 @@
                 Linear Algebra I (MAT223), Teaching Assistant, University of Toronto (Fall 2024)
               </p>
               <p>
-                I volunteered with the Pursue STEM Program in 2023 and 2024, teaching underpriveleged high school students in the Greater Toronto Area about math.
+                I volunteered with the Pursue STEM Program in 2023 and 2024, teaching underpriveleged high school students in the Greater Toronto Area math and providing mentorship.
               </p>
             </td>
           </tr>
