--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
             <p>
             I was originally a physics major prior to switching into math. I love statistics because it combines the beauty of math but to solve real world problems. My research interest lies in applied statistics. I was the President of the University of Toronto Mathematics Union and I started a <a href="https://www.google.com/search?client=safari&rls=en&q=community+garden+victoria+college&ie=UTF-8&oe=UTF-8">community garden</a> at Victoria College. I am from Winnipeg, Manitoba.           </p>
               <p style="text-align:center">
-                <a href="mailto: amy.mann@mail.utoronto.ca"> Email</a> &nbsp;/&nbsp;
+                <a href="mailto: amy.mann@chch.ox.ac.uk"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/am-mann">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/amy-mann-08a590216/"> LinkedIn </a>
               </p>
