--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -201,7 +201,10 @@
     <td style="padding:2.5%;width:100%;vertical-align:middle">
       <h2>Miscellanea</h2>
       <p>
-       Outside of math and statistics, I am interested in history. I took a seminar class on the history of medicine and my paper was selected to be published in <a href="https://indd.adobe.com/view/013ff01a-74f4-4e21-a2e1-edbe4ae1791d">Synthesis: Undergraduate Journal of History of Science</a>. You can also read it <a href="https://drive.google.com/file/d/1iosR7cTeiQ01hzXGpWTDDuQCcz2-XZoF/view?usp=sharing">here</a>. On the side, I also wrote a <a href="https://drive.google.com/file/d/1a3ymxwu6UqDJYJs-E51DxNIBNIPKuU8L/view?usp=sharing">scoping review</a> of association guidelines recommending lifestyle interventions with guidance from Natalie Riediger which I continue to think is interesting.
+       Outside of math and statistics, I am interested in history. I took a seminar class on the history of medicine and my paper was selected to be published in <a href="https://indd.adobe.com/view/013ff01a-74f4-4e21-a2e1-edbe4ae1791d">Synthesis: Undergraduate Journal of History of Science</a>. You can also read it <a href="https://drive.google.com/file/d/1iosR7cTeiQ01hzXGpWTDDuQCcz2-XZoF/view?usp=sharing">here</a>. 
+       </p> 
+       <p>
+       I also wrote a <a href="https://drive.google.com/file/d/1a3ymxwu6UqDJYJs-E51DxNIBNIPKuU8L/view?usp=sharing">thesis</a> on mischaracterization of evidence in medical association guidelines recommeding lifestyle interventions, and especially cardiology guidelines with guidance from Natalie Riediger which I continue to think is interesting.
       </p>  
       <p>
         <strong>Books I really love</strong><br>
