--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -201,7 +201,7 @@
     <td style="padding:2.5%;width:100%;vertical-align:middle">
       <h2>Miscellanea</h2>
       <p>
-       Outside of math and statistics, I am interested in the history of medicine and I enjoy running. I took a seminar class on the history of medicine and my paper was selected to be published in <a href="https://indd.adobe.com/view/013ff01a-74f4-4e21-a2e1-edbe4ae1791d">Synthesis: Undergraduate Journal of History of Science</a>. You can also read it <a href="https://drive.google.com/file/d/1iosR7cTeiQ01hzXGpWTDDuQCcz2-XZoF/view?usp=sharing">here</a>. 
+       Outside of math and statistics, I am interested in the history of medicine and Canadian politics. I took a seminar class on the history of medicine and my paper was selected to be published in <a href="https://indd.adobe.com/view/013ff01a-74f4-4e21-a2e1-edbe4ae1791d">Synthesis: Undergraduate Journal of History of Science</a>. You can also read it <a href="https://drive.google.com/file/d/1iosR7cTeiQ01hzXGpWTDDuQCcz2-XZoF/view?usp=sharing">here</a>. 
        </p> 
        <p>
 On the side, I wrote a <a href="https://drive.google.com/file/d/1a3ymxwu6UqDJYJs-E51DxNIBNIPKuU8L/view?usp=sharing">review</a> on the miscitation of evidence in medical association guidelines, with guidance from Natalie Riediger, which I continue to find interesting.      </p>  
