--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -207,8 +207,8 @@
 On the side, I wrote a <a href="https://drive.google.com/file/d/1a3ymxwu6UqDJYJs-E51DxNIBNIPKuU8L/view?usp=sharing">review</a> on the miscitation of evidence in medical association guidelines, with guidance from Natalie Riediger, which I continue to find interesting.      </p>  
       <p>
         <strong>Books I really love</strong><br>
-        2025: Eden's Outcasts, Say Nothing, We Don't Know Ourselves, America, América, The Pope and Mussolini <br>
-        2024: Far From the Tree, Mountains beyond Mountains, Amusing Ourselves to Death, The Man Without a Face, The Gnostic Gospels<br>
+        2025: Eden's Outcasts, Gilead, Say Nothing, We Don't Know Ourselves, America, América, The Pope and Mussolini <br>
+        2024: Far From the Tree, Tenth of December, Mountains beyond Mountains, Amusing Ourselves to Death, The Man Without a Face, The Gnostic Gospels<br>
         2023: Prairie Fires, Empire of Pain, The Future is History <br>
         <br>
         I enjoy reviewing books and I recently got a <a href="https://www.goodreads.com/review/list/190316788?sort=rating&view=reviews">Goodreads account</a>.
