--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,7 @@
                 <a href="mailto: amy.mann@chch.ox.ac.uk"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/am-mann">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/amy-mann-08a590216/"> LinkedIn </a>
+                <a href="/pdfs/cv.pdf"> CV </a>&nbsp;/&nbsp;
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
